--- a/ops/prometheus/tests/alerts_test.yml
+++ b/ops/prometheus/tests/alerts_test.yml
@@ -278,7 +278,7 @@ tests:
               dataset: ohlcv_1h
             exp_annotations:
               summary: "Stale dataset: ohlcv_1h"
-              description: "Ingen opdatering >15 min. Tjek ingestion-job & cred."
+              description: "Ingen opdatering >15 min for dataset=ohlcv_1h.\nTjek ingestion-job, cred og upstream kilder.\nfreshness_minutes=20\nRunbook: docs/runbooks/data_quality.md#freshness\n"
 
   # 11) DQViolationsBurst — increase(dq_violations_total[5m]) > 0 for:2m
   - name: dq_violations_burst
@@ -299,5 +299,5 @@ tests:
               contract: ohlcv_1h
               rule: bounds_min
             exp_annotations:
-              summary: "Data Quality issues"
-              description: "Violations i seneste 5m. Se runbook: docs/runbooks/data_quality.md"
+              summary: "Data Quality issues (ohlcv_1h / bounds_min)"
+              description: "Der er registreret DQ-violations de seneste 5 min (kontrakt=ohlcv_1h, rule=bounds_min).\nSe runbook: docs/runbooks/data_quality.md\nvalue=3\n"
