--- a/pytest.ini
+++ b/pytest.ini
@@ -15,9 +15,10 @@ python_functions = test_*
 # Sørg for at projektroden er på import-stien
 pythonpath = .
 
-# Ignorer støjende/ikke-test mapper (inkl. Windows systemmapper)
+# Ignorér støjende/ikke-test mapper (inkl. Windows/system)
 norecursedirs =
     .git
+    .github
     .venv
     .venv_*
     .pytest_cache
@@ -31,6 +32,8 @@ norecursedirs =
     mlruns
     ops
     docs
+    scripts
+    tools
     $Recycle.Bin
     System Volume Information
 
@@ -50,8 +53,7 @@ markers =
     pandas_ta: Tests der kræver pandas_ta
     persistence: Fase-4 persistens/filhygiejne tests (utils/artifacts, rotation, arkiv)
 
-# Standard-flags
-# (Vi styrer coverage her, så CLI/pyproject-opsætninger overskrives)
+# Standard-flags (coverage begrænset til det, der faktisk testes)
 addopts =
     -vv
     -ra
@@ -62,9 +64,10 @@ addopts =
     --durations=10
     --color=yes
     --junitxml=reports/junit.xml
-    --cov=bot
-    --cov=utils
-    --cov=data
+    --cov=bot/live_connector
+    --cov=utils/data_quality
+    --cov=utils/dq_wiring
+    --cov=utils/metrics_utils
     --cov-report=html
     --cov-report=xml:reports/coverage.xml
     --cov-fail-under=35
