--- a/pytest.ini
+++ b/pytest.ini
@@ -53,7 +53,7 @@ markers =
     pandas_ta: Tests der kræver pandas_ta
     persistence: Fase-4 persistens/filhygiejne tests (utils/artifacts, rotation, arkiv)
 
-# Standard-flags (coverage begrænset til det, der faktisk testes)
+# Standard-flags — coverage KUN over connectoren (samme som i CI)
 addopts =
     -vv
     -ra
@@ -64,14 +64,12 @@ addopts =
     --durations=10
     --color=yes
     --junitxml=reports/junit.xml
-    --cov=bot/live_connector
-    --cov=utils/data_quality
-    --cov=utils/dq_wiring
-    --cov=utils/metrics_utils
-    --cov-report=html
+    --cov=bot.live_connector
+    --cov-branch
+    --cov-report=term-missing:skip-covered
     --cov-report=xml:reports/coverage.xml
+    --cov-report=html
     --cov-fail-under=35
-    # Midlertidigt: udeluk tunge/native tests globalt (matcher CI)
     -k "not heavy and not talib and not pandas_ta"
 
 # Undertryk specifikke, kendte advarsler
