--- a/.github/workflows/observability.yml
+++ b/.github/workflows/observability.yml
@@ -19,8 +19,8 @@ permissions:
 env:
   PYTHONUNBUFFERED: "1"
   MPLBACKEND: Agg
-  PROM_VERSION: "v3.6.0"   # match docker-compose Prometheus/promtool version
-  DQ_SHARED_SECRET: "change-me-long-random"  # bruges af /dq/* prod-endpoints
+  PROM_VERSION: "v3.6.0"     # skal matche Prometheus/promtool i compose
+  DQ_SHARED_SECRET: "change-me-long-random"  # auth til /dq/* prod-endpoints
 
 jobs:
   unit-smoke:
@@ -57,12 +57,14 @@ jobs:
           python -m pip install -U pip wheel setuptools
 
           if [ -f requirements.txt ]; then
+            # hurtig binær pre-seed for stabil CI
             pip install --only-binary=:all: 'numpy==1.26.4' 'pyarrow==11.0.0' || true
             pip install -r requirements.txt
           else
             pip install fastapi uvicorn prometheus-client httpx pytest pandas pyarrow requests
           fi
 
+          # Valgfrit: CPU Torch (ikke kritisk for observability)
           pip install --extra-index-url https://download.pytorch.org/whl/cpu \
             'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
 
@@ -78,7 +80,7 @@ jobs:
 
       - name: Launch app (uvicorn) in background
         env:
-          ENABLE_DEBUG_ROUTES: "1"
+          ENABLE_DEBUG_ROUTES: "1"   # tillad test-ruter i smoke
         run: |
           set -euxo pipefail
           nohup uvicorn bot.live_connector.runner:app \
@@ -107,21 +109,25 @@ jobs:
         run: |
           set -euxo pipefail
           curl -fsS http://localhost:8000/metrics | tee /tmp/metrics.txt >/dev/null
+          # Core
           grep -q "feed_transport_latency_ms_bucket" /tmp/metrics.txt
           grep -q "feed_bar_close_lag_ms"          /tmp/metrics.txt
           grep -q "feed_bars_total"                /tmp/metrics.txt
           grep -q "feed_reconnects_total"          /tmp/metrics.txt
           grep -q "feed_queue_depth"               /tmp/metrics.txt
           grep -q "feature_compute_ms_bucket"      /tmp/metrics.txt
+          # Fase 5 (DQ)
           grep -q 'dq_violations_total'            /tmp/metrics.txt
           grep -q 'dq_freshness_minutes{dataset="ohlcv_1h"}' /tmp/metrics_after_dq.txt
 
+      # ---------- promtool forberedelse: sørg for alle filer findes ----------
       - name: Ensure Prometheus rule files exist (create minimal if missing)
         shell: bash
         run: |
           set -euxo pipefail
           mkdir -p ops/prometheus/rules ops/prometheus/tests
 
+          # alerts.yml
           if [ ! -f ops/prometheus/alerts.yml ]; then
             printf '%s\n' \
               'groups:' \
@@ -130,6 +136,7 @@ jobs:
               > ops/prometheus/alerts.yml
           fi
 
+          # recording_rules.yml
           if [ ! -f ops/prometheus/recording_rules.yml ]; then
             printf '%s\n' \
               'groups:' \
@@ -138,6 +145,7 @@ jobs:
               > ops/prometheus/recording_rules.yml
           fi
 
+          # data_quality.yml (matcher promtool tests/annotations)
           if [ ! -f ops/prometheus/rules/data_quality.yml ]; then
             printf '%s\n' \
               'groups:' \
@@ -341,6 +349,7 @@ jobs:
           docker compose -f docker-compose.yml up -d --wait live_connector prometheus
           docker compose -f docker-compose.yml ps
 
+          # Vent på appens healthz
           ok=0
           for i in {1..120}; do
             if curl -fsS http://localhost:8000/healthz >/dev/null; then ok=1; break; fi
@@ -352,6 +361,7 @@ jobs:
             exit 2
           fi
 
+          # Vent på Prometheus readiness
           ok=0
           for i in {1..240}; do
             if curl -fsS http://localhost:9090/-/ready >/dev/null; then ok=1; break; fi
