--- a/ops/prometheus/prometheus.yml
+++ b/ops/prometheus/prometheus.yml
@@ -1,30 +1,43 @@
+# ops/prometheus/prometheus.yml
 global:
-  scrape_interval: 5s          # hurtig feedback i dev
-  evaluation_interval: 5s      # rules evalueres ofte (dev)
+  scrape_interval: 5s            # hurtig feedback i dev
+  evaluation_interval: 5s        # rules evalueres ofte (dev)
   scrape_timeout: 4s
   external_labels:
     env: dev
 
+# Alertmanager (kun aktiv hvis profil 'alerting' kører)
 alerting:
   alertmanagers:
     - static_configs:
-        - targets: ['alertmanager:9093']   # virker når Alertmanager-profil er aktiv
+        - targets: ["alertmanager:9093"]
 
-# VIGTIGT: indlæs alle rule-filer inkl. Fase 5 DQ (rules/data_quality.yml)
+# VIGTIGT: indlæs alle rule-filer inkl. Fase 5 DQ og Fase 6 recording rules
 rule_files:
-  - /etc/prometheus/recording_rules.yml
-  - /etc/prometheus/alerts.yml
-  - /etc/prometheus/rules/*.yml
+  - /etc/prometheus/recording_rules.yml       # valgfri enkeltfil (hvis du bruger den)
+  - /etc/prometheus/alerts.yml                # valgfri enkeltfil (hvis du bruger den)
+  - /etc/prometheus/rules/*.yml               # hele rules-mappen (fx recording_rules_fase6.yml, data_quality.yml)
 
 scrape_configs:
   # Scrape Prometheus selv (diagnostik)
-  - job_name: 'prometheus'
+  - job_name: prometheus
     metrics_path: /metrics
     static_configs:
-      - targets: ['prometheus:9090']
+      - targets: ["prometheus:9090"]
 
   # Live connector app
-  - job_name: 'live_connector'
+  - job_name: live_connector
     metrics_path: /metrics
     static_configs:
-      - targets: ['live_connector:8000']
+      - targets: ["live_connector:8000"]
+    # Beskyt mod label-eksplosion i dev (drop super-høj kardinalitet, hvis sat af app'en)
+    metric_relabel_configs:
+      - source_labels: [symbol]
+        regex: ".{65,}"
+        action: drop
+
+  # Alertmanager metrics (valgfri; kun hvis profil 'alerting' kører)
+  - job_name: alertmanager
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["alertmanager:9093"]
