--- a/ops/prometheus/prometheus.yml
+++ b/ops/prometheus/prometheus.yml
@@ -1,10 +1,11 @@
 # ops/prometheus/prometheus.yml
+
 global:
-  scrape_interval: 5s            # hurtig feedback i dev
+  scrape_interval: 5s            # hurtig feedback i dev/homelab
   evaluation_interval: 5s        # rules evalueres ofte (dev)
   scrape_timeout: 4s
   external_labels:
-    env: dev
+    env: dev                     # kan sættes til stage/prod i andre miljøer
 
 # Alertmanager (kun aktiv hvis profil 'alerting' kører)
 alerting:
@@ -12,11 +13,12 @@ alerting:
     - static_configs:
         - targets: ["alertmanager:9093"]
 
-# VIGTIGT: indlæs alle rule-filer inkl. Fase 5 DQ og Fase 6 recording rules
+# VIGTIGT: indlæs alle rule-filer inkl. Fase 5 DQ, Fase 6 recording rules
+# og evt. telegram_test.yml til manuel test af Telegram-alerts.
 rule_files:
   - /etc/prometheus/recording_rules.yml       # valgfri enkeltfil (hvis du bruger den)
   - /etc/prometheus/alerts.yml                # valgfri enkeltfil (hvis du bruger den)
-  - /etc/prometheus/rules/*.yml               # hele rules-mappen (fx recording_rules_fase6.yml, data_quality.yml)
+  - /etc/prometheus/rules/*.yml               # hele rules-mappen (fx recording_rules_fase6.yml, data_quality.yml, telegram_test.yml)
 
 scrape_configs:
   # Scrape Prometheus selv (diagnostik)
@@ -24,12 +26,16 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
       - targets: ["prometheus:9090"]
+        labels:
+          service: prometheus
 
   # Live connector app
   - job_name: live_connector
     metrics_path: /metrics
     static_configs:
       - targets: ["live_connector:8000"]
+        labels:
+          service: live_connector
     # Beskyt mod label-eksplosion i dev (drop super-høj kardinalitet, hvis sat af app'en)
     metric_relabel_configs:
       - source_labels: [symbol]
@@ -41,3 +47,5 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
       - targets: ["alertmanager:9093"]
+        labels:
+          service: alertmanager
