--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,8 @@ trades/
 secrets/
 config/*.json
 config/client_secret_*.json
+config/env/live.env
+
 
 # =========================
 # MLflow / TensorBoard / Eksperimenter
