EPIC B — B1 Fill-motor v2: realistisk fill engine + engine-integration

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,8 @@ testpaths =
     tests/venues
     tests/integration
     tests/persistence
+    tests/backtest
+    tests/bot
 
 # Test discovery
 python_files = test_*.py *_test.py
