--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,9 @@ testpaths =
     tests/persistence
     tests/backtest
     tests/bot
+    tests/execution
+    tests/risk
+    tests/shadow
 
 # Test discovery
 python_files = test_*.py *_test.py
@@ -55,7 +58,7 @@ markers =
     pandas_ta: Tests der kræver pandas_ta
     persistence: Fase-4 persistens/filhygiejne tests (utils/artifacts, rotation, arkiv)
 
-# Standard-flags — coverage KUN over connectoren (samme som i CI)
+# Standard-flags (UDEN coverage – coverage styres fra CI/CLI)
 addopts =
     -vv
     -ra
@@ -66,12 +69,6 @@ addopts =
     --durations=10
     --color=yes
     --junitxml=reports/junit.xml
-    --cov=bot.live_connector
-    --cov-branch
-    --cov-report=term-missing:skip-covered
-    --cov-report=xml:reports/coverage.xml
-    --cov-report=html
-    --cov-fail-under=35
     -k "not heavy and not talib and not pandas_ta"
 
 # Undertryk specifikke, kendte advarsler
