--- a/.github/workflows/observability.yml
+++ b/.github/workflows/observability.yml
@@ -2,11 +2,13 @@ name: observability
 
 on:
   push:
-    branches: ["**"]
+    branches:
+      - "**"
   pull_request:
-    branches: ["**"]
+    branches:
+      - "**"
   schedule:
-    - cron: "0 5 * * *"
+    - cron: "0 5 * * "
   workflow_dispatch:
 
 concurrency:
@@ -18,18 +20,18 @@ permissions:
 
 env:
   PYTHONUNBUFFERED: "1"
-  MPLBACKEND: Agg
+  MPLBACKEND: "Agg"
 
-  PROM_VERSION: "v2.53.0"     # skal matche Prometheus/promtool i compose
-  DQ_SHARED_SECRET: "change-me-long-random"  # auth til /dq/* prod-endpoints
   # Bruges af ops/compose/docker-compose.yml:
   # env_file: ${LIVE_ENV_FILE:-../../config/env/live.env}
   # I CI peger vi på en dummy-fil, der oprettes dynamisk.
   LIVE_ENV_FILE: "../../config/env/live.ci.env"
 
-  PROM_VERSION: "v3.6.0"     # skal matche Prometheus/promtool i compose
-  DQ_SHARED_SECRET: "change-me-long-random"  # auth til /dq/* prod-endpoints
+  # Version til prom/prometheus images (promtool + compose)
+  PROM_VERSION: "v3.6.0"
 
+  # Auth til /dq/* prod-endpoints
+  DQ_SHARED_SECRET: "change-me-long-random"
 
 jobs:
   unit-smoke:
@@ -79,7 +81,9 @@ jobs:
 
           python - <<'PY'
           import importlib
-          for name in ("torch","torchvision","torchaudio","fastapi","uvicorn","prometheus_client","numpy","pyarrow","pytest","pandas","requests"):
+          for name in ("torch","torchvision","torchaudio",
+                       "fastapi","uvicorn","prometheus_client",
+                       "numpy","pyarrow","pytest","pandas","requests"):
               try:
                   m = importlib.import_module(name)
                   print(f"{name}: {getattr(m,'__version__','?')}")
@@ -345,7 +349,6 @@ jobs:
 
           test -f ops/prometheus/prometheus.yml
 
-
       - name: Prepare LIVE_ENV_FILE for CI (dummy env)
         shell: bash
         run: |
@@ -359,7 +362,6 @@ jobs:
           fi
           echo "LIVE_ENV_FILE expected at: ${LIVE_ENV_FILE}"
           ls -R config/env
-
 
       - name: Compose up (live_connector + prometheus only)
         working-directory: ops/compose
