--- a/ops/compose/docker-compose.yml
+++ b/ops/compose/docker-compose.yml
@@ -12,9 +12,6 @@
 #            som oprettes i workflowet før docker compose køres.
 
 networks:
-  obsnet: {}
-
-networks:
   obsnet:
     name: obsnet
 
@@ -39,22 +36,7 @@ services:
       context: ../../
     image: live-connector:local
     container_name: live_connector
-    # Kør CLI-entrypoint som Python-modul
-    command:
-      - python
-      - -m
-      - bot.live_connector.cli
-      - --quiet
-    # Basis-ENV + live-specifikke indstillinger i separat env-fil
-    # Lokalt: ../../config/env/live.env
-    # CI:     LIVE_ENV_FILE peger på en dummy/template-fil
-    env_file:
-      - ${LIVE_ENV_FILE:-../../config/env/live.env}
-    environment:
-      PYTHONUNBUFFERED: "1"
-      LOG_LEVEL: "INFO"
-    ports:
-      # Prometheus HTTP-server (prometheus_client.start_http_server)
+    # Kør HTTP/metrics via uvicorn-runner
     command:
       - uvicorn
       - bot.live_connector.runner:app
@@ -64,6 +46,11 @@ services:
       - "8000"
       - --workers
       - "1"
+    # Basis-ENV + live-specifikke indstillinger i separat env-fil
+    # Lokalt: ../../config/env/live.env
+    # CI:     LIVE_ENV_FILE peger på en dummy/template-fil
+    env_file:
+      - ${LIVE_ENV_FILE:-../../config/env/live.env}
     environment:
       PYTHONUNBUFFERED: "1"
       LOG_LEVEL: "INFO"
@@ -82,9 +69,12 @@ services:
       obsnet:
         aliases: ["live_connector"]
     healthcheck:
-      # Tjek at metrics-endpoint svarer
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:8000/metrics >/dev/null 2>&1 || exit 1"]
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:8000/healthz >/dev/null 2>&1 || exit 1"]
+      # Tjek at både metrics og healthz svarer
+      test:
+        [
+          "CMD-SHELL",
+          "wget -qO- http://127.0.0.1:8000/metrics >/dev/null 2>&1 && wget -qO- http://127.0.0.1:8000/healthz >/dev/null 2>&1 || exit 1",
+        ]
       interval: 5s
       timeout: 3s
       retries: 12
@@ -101,7 +91,7 @@ services:
     image: alpine:3.20
     environment:
       ALERT_TMPL: /src/alertmanager.yml.tmpl
-      ALERT_OUT:  /amcfg/alertmanager.yml
+      ALERT_OUT: /amcfg/alertmanager.yml
     volumes:
       - amcfg:/amcfg
       - ../alertmanager/alertmanager.runtime.yml:/src/alertmanager.yml.tmpl:ro
@@ -133,7 +123,11 @@ services:
       obsnet:
         aliases: ["alertmanager"]
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:9093/-/ready >/dev/null 2>&1 || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "wget -qO- http://127.0.0.1:9093/-/ready >/dev/null 2>&1 || exit 1",
+        ]
       interval: 10s
       timeout: 3s
       retries: 15
@@ -149,7 +143,6 @@ services:
       - --web.enable-lifecycle
     volumes:
       - ../prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      # Valgfri enkelt-filer (hvis du bruger dem i din config)
       # Valgfri enkel-filer (hvis du bruger dem i din config)
       - ../prometheus/alerts.yml:/etc/prometheus/alerts.yml:ro
       - ../prometheus/recording_rules.yml:/etc/prometheus/recording_rules.yml:ro
@@ -166,7 +159,11 @@ services:
       obsnet:
         aliases: ["prometheus"]
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:9090/-/ready >/dev/null 2>&1 || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "wget -qO- http://127.0.0.1:9090/-/ready >/dev/null 2>&1 || exit 1",
+        ]
       interval: 5s
       timeout: 3s
       retries: 60
@@ -194,8 +191,6 @@ services:
       - GF_LOG_FILTERS=authn.service:info
 
       # Plugins-signatures disabled (nemmere i homelab)
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
       - GF_PLUGINS_SIGNATURES_ENABLED=false
     volumes:
       - ../grafana/provisioning:/etc/grafana/provisioning:ro
@@ -211,14 +206,17 @@ services:
       obsnet:
         aliases: ["grafana"]
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:3000/api/health >/dev/null 2>&1 || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "wget -qO- http://127.0.0.1:3000/api/health >/dev/null 2>&1 || exit 1",
+        ]
       interval: 10s
       timeout: 3s
       retries: 12
       start_period: 20s
 
-  # Valgfri: "varm" metrics i dev ved at scrape /metrics hver N sek
-  # Valgfri: varm metrics i dev ved at poste til /_debug/emit_sample hver N sek
+  # Valgfri: "varm" metrics i dev ved at scrape /metrics + sende _debug-events
   sample_emitter:
     profiles: ["debug"]
     image: curlimages/curl:8.8.0
@@ -233,13 +231,12 @@ services:
       - |
         set -e
         echo "Venter på live_connector..."
-        until curl -sf http://live_connector:8000/metrics >/dev/null; do sleep 2; done
-        echo "Scraper /metrics hver ${EMIT_EVERY}s"
+        until curl -sf http://live_connector:8000/healthz >/dev/null; do
+          sleep 2
+        done
+        echo "Scraper /metrics og spammer /_debug/emit_sample hver ${EMIT_EVERY}s"
         while :; do
           curl -s http://live_connector:8000/metrics >/dev/null || true
-        until curl -sf http://live_connector:8000/healthz >/dev/null; do sleep 2; done
-        echo "Spammer /_debug/emit_sample hver ${EMIT_EVERY}s"
-        while :; do
           curl -s -X POST http://live_connector:8000/_debug/emit_sample >/dev/null || true
           sleep "${EMIT_EVERY}"
         done
